package com.example.demo;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class OrderProcessingController {

}