import React, { useState } from 'react';
import { Button, TextField, Typography } from '@mui/material';
import axios from 'axios';

interface Order {
  orderId: number;
  // ... other order properties
}

const OrderManagementSystem: React.FC = () => {
  const [loginResult, setLoginResult] = useState<boolean | null>(null);
  const [order, setOrder] = useState<Order | null>(null);
  const [operationType, setOperationType] = useState<string>('');
  const [verificationResult, setVerificationResult] = useState<boolean | null>(null);
  const [errorMessage, setErrorMessage] = useState<string>('');
  const [successMessage, setSuccessMessage] = useState<string>('');
  const [warningMessage, setWarningMessage] = useState<string>('');


  const handleLogin = async () => {
    try {
      const response = await axios.post('/api/login', { /* login credentials */ });
      setLoginResult(response.data.success);
    } catch (error) {
      setErrorMessage('Login failed');
    }
  };

  const handleGetOrder = async (orderId: number) => {
    try {
      const response = await axios.get(`/api/orders/${orderId}`);
      setOrder(response.data);
    } catch (error) {
      setErrorMessage('Failed to retrieve order');
    }
  };

  const handleOperation = async () => {
    try {
      const response = await axios.post(`/api/orders/operation/${operationType}`, { /* operation data */ });
      setVerificationResult(response.data.success);
    } catch (error) {
      setErrorMessage('Operation failed');
    }
  };

  const displayLoginResult = (result: boolean) => {
    if (result) {
      setSuccessMessage('Login successful!');
    } else {
      setErrorMessage('Login failed!');
    }
  };

  const displayOrderInformation = (order: Order) => {
    // Display order information
    console.log("Order:", order);
  };

  const displayOperationInterface = (operationType: string) => {
    // Display operation interface
    setOperationType(operationType);
  };

  const displayVerificationResult = (result: boolean) => {
    if (result) {
      setSuccessMessage('Operation successful!');
    } else {
      setErrorMessage('Operation failed!');
    }
  };

  const displayErrorMessage = (message: string) => {
    setErrorMessage(message);
  };

  const displaySuccessMessage = (message: string) => {
    setSuccessMessage(message);
  };

  const displayWarningMessage = (message: string) => {
    setWarningMessage(message);
  };

  const displayLogoutMessage = () => {
    setSuccessMessage('Logged out successfully!');
  };

  const displayMainScreen = () => {
    // Display main screen
  };


  return (
    <div>
      {loginResult === null && (
        <Button onClick={handleLogin}>Login</Button>
      )}
      {loginResult && (
        <>
          <Button onClick={() => displayMainScreen()}>Main Screen</Button>
          <TextField label="Order ID" onChange={(e) => handleGetOrder(parseInt(e.target.value, 10))} />
          {order && <Typography>{JSON.stringify(order)}</Typography>}
          <TextField label="Operation Type" onChange={(e) => displayOperationInterface(e.target.value)}/>
          <Button onClick={handleOperation}>Perform Operation</Button>
          {errorMessage && <Typography color="error">{errorMessage}</Typography>}
          {successMessage && <Typography color="success">{successMessage}</Typography>}
          {warningMessage && <Typography color="warning">{warningMessage}</Typography>}
          <Button onClick={() => displayLogoutMessage()}>Logout</Button>
        </>
      )}
    </div>
  );
};

export default OrderManagementSystem;